src/objects/CBLogDetail__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>CBLog__c</referenceTo>
        <relationshipName>CBLogDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>TextArea</type>
    </fields>
    <label>CB LogDetail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CBLogDetail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB LogDetails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>